my-apps/development/mailpit/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mailpit-route
  namespace: mailpit
  labels:
    external-dns: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: "jrb.nz"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "mailpit.jrb.nz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: mailpit
          port: 8025
          weight: 1
